src/theme/common/globals.st.css
@namespace "Global";

@st-import [boxSizing] from "../mixins.st.css";

:global(html) {
	-st-mixin: boxSizing;
	margin: 0;
	height: 100%;
}

:global(body) {
	-st-mixin: boxSizing;
	margin: 0;
	height: 100%;
}

:global(p) {
	margin: 0;
}

:global(h1),
:global(h2),
:global(h3),
:global(h4),
:global(h5),
:global(h6) {
	margin: 0;
}

:global(button) {
	border: none;
	padding: 0;
	background: none;
	font-family: inherit;
}

:global(input),
:global(textarea) {
	font-family: inherit;
}

